--- a/src/main/resources/locales/messages.properties
+++ b/src/main/resources/locales/messages.properties
@@ -1,4 +1,6 @@
-validation.user.username.not-empty=Username must not be empty.
+validation.user.username.min=Username must have at least 3 letters.
+validation.user.username.max=Username must have less than 26 letters.
+validation.user.username.letters=Username must contain only letters.
 validation.user.email.not-valid=This is not valid email.
 validation.user.email.not-empty=Email must not be empty.
 validation.user.password.not-empty=Password must not be empty.
