Registration verification by email.

--- a/src/main/resources/locales/messages.properties
+++ b/src/main/resources/locales/messages.properties
@@ -1,5 +1,4 @@
-validation.user.username.min=Username must have at least 3 letters.
-validation.user.username.max=Username must have less than 26 letters.
+validation.user.username.bounds=Username must have at least 3 letters but less than 26 letters.
 validation.user.username.letters=Username must contain only letters.
 validation.user.email.not-valid=This is not valid email.
 validation.user.email.not-empty=Email must not be empty.
