--- a/src/main/resources/locales/messages.properties
+++ b/src/main/resources/locales/messages.properties
@@ -4,3 +4,5 @@ validation.user.email.not-valid=This is not valid email.
 validation.user.email.not-empty=Email must not be empty.
 validation.user.password.not-empty=Password must not be empty.
 validation.user.username.not-empty=Username must not be empty.
+validation.user.longitude.not-empty=Longitude must be between -180 and 180.
+validation.user.latitude.not-empty=Latitude must be between -90 and 90.
