--- a/src/main/resources/locales/messages_pl.properties
+++ b/src/main/resources/locales/messages_pl.properties
@@ -1,1 +1,3 @@
 validation.user.username.not-empty=Nazwa u¿ytkownika nie mo¿e byæ pusta.
+validation.user.longitude.not-empty=D³ugoœæ geograficzna powinna znajdowaæ siê w zakresie -180 a 180.
+validation.user.latitude.not-empty=Szerokoœæ geograficzna powinna znajdowaæ siê w zakresie -90 do 90.
